--- a/.github/workflows/dagger_pipeline.yml
+++ b/.github/workflows/dagger_pipeline.yml
@@ -13,22 +13,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Install Go
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21
 
-      # Step 3: Run a dummy command
-      - name: Run dummy command
+      - name: Cleanup cache paths
         run: |
-          echo "This is a placeholder for the Dagger pipeline"
+          rm -rf ~/go/pkg/mod ~/.cache/go-build
 
-      # Step 3: Restore Go dependencies cache
       - name: Restore Go cache
         uses: actions/cache@v3
         with:
@@ -39,16 +35,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      # Step 4: Install dependencies
       - name: Install dependencies
         run: go mod tidy
 
-      # Step 5: Install Dagger CLI
       - name: Install Dagger CLI
         run: |
           curl -L https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=0.8.0 sh
           echo "export PATH=\$PATH:/home/runner/.dagger/bin" >> $GITHUB_ENV
 
-      # Step 6: Run Dagger pipeline
       - name: Run Dagger pipeline
         run: go run main.go
