Changed cleanup command

--- a/.github/workflows/dagger_pipeline.yml
+++ b/.github/workflows/dagger_pipeline.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Cleanup cache paths
         run: |
-          rm -rf ~/go/pkg/mod ~/.cache/go-build
+          go clean -modcache
 
       - name: Restore Go cache
         uses: actions/cache@v3
