--- a/.github/workflows/dagger_pipeline.yml
+++ b/.github/workflows/dagger_pipeline.yml
@@ -16,14 +16,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+
+      - name: Cleanup Go environment
+        run: |
+          sudo rm -rf /usr/local/go /usr/local/go/* ~/go ~/go/* ~/.cache/go-build
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21
-
-      - name: Cleanup cache paths
-        run: |
-          go clean -modcache
 
       - name: Restore Go cache
         uses: actions/cache@v3
